fix spacing of charts and filters

--- a/src/components/ReportCharts/ReportCharts.css
+++ b/src/components/ReportCharts/ReportCharts.css
@@ -1,6 +1,5 @@
 .ReportCharts {
   display: flex;
-  margin: 30px 0;
 }
 
 .ReportCharts__Legend {
