--- a/src/components/ReportFilters/ReportFilters.css
+++ b/src/components/ReportFilters/ReportFilters.css
@@ -1,6 +1,5 @@
 .Report__filters {
   display: block;
-  margin: 12px 0;
   line-height: 1.2em;
 }
 
